--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
       }
     ],
     "require":{
-      "silverstripe/recipe-cms": "^4"
+      "silverstripe/recipe-cms": "^4 || ^5"
     },
     "autoload": {
       "psr-4": {
