--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,47 @@
 {
-    "name":"innomedia/faq",
-    "description": "FAQ Module",
-    "license": "BSD-3-Clause",
-    "authors": [
-      {
-        "name":"innomedia AG",
-        "email": "info@innomedia.de"
-      }
-    ],
-    "require":{
-      "silverstripe/recipe-cms": "^4 || ^5"
-    },
-    "autoload": {
-      "psr-4": {
-        "FAQ\\": "src/"
-      }
+  "name": "innomedia/faq",
+  "description": "FAQ Module",
+  "license": "BSD-3-Clause",
+  "authors": [
+    {
+      "name": "innomedia AG",
+      "email": "info@innomedia.de"
     }
+  ],
+  "require": {
+    "silverstripe/recipe-cms": "^6",
+    "symbiote/silverstripe-gridfieldextensions": "^5"
+  },
+  "autoload": {
+    "psr-4": {
+      "FAQ\\": "src/"
+    }
+  },
+  "require-dev": {
+    "rector/rector": "^2.2",
+    "phpstan/phpstan": "^2.1",
+    "wernerkrauss/silverstripe-rector": "^1.0"
+  },
+  "config": {
+    "allow-plugins": {
+      "composer/installers": true,
+      "silverstripe/recipe-plugin": true,
+      "silverstripe/vendor-plugin": true
+    }
+  },
+  "extra": {
+    "project-files-installed": [
+      ".htaccess",
+      "app/.htaccess",
+      "app/_config/mimevalidator.yml",
+      "app/_config/mysite.yml",
+      "app/src/Page.php",
+      "app/src/PageController.php"
+    ],
+    "public-files-installed": [
+      ".htaccess",
+      "index.php",
+      "web.config"
+    ]
   }
-  
+}
